src/test/resources/invalid/typecheck/This_WrongArg.vas
class Main is
    this(a: Array[Integer]) is
    end

    method test() is
        this(false)
    end
end